--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,10 @@
 .App {
   text-align: center;
+  font-family: fantasy;
+  /* background-image: url("./images/Banner1.png");
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat; */
 }
 
 .App-logo {
