Some styling fixes

--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,11 @@
 .App {
   text-align: center;
   font-family: fantasy;
-  /* background-image: url("./images/Banner1.png");
+  background-color: white;
+  background-image: url("./images/Banner4.png");
   background-size: cover;
   background-position: center;
-  background-repeat: no-repeat; */
+  background-repeat: no-repeat;
 }
 
 .App-logo {
