--- a/src/App.css
+++ b/src/App.css
@@ -2,7 +2,7 @@
   text-align: center;
   font-family: fantasy;
   background-color: white;
-  background-image: url("./images/Banner4.png");
+  /* background-image: url("./images/Banner4.png"); */
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
